--- a/assets/app.css
+++ b/assets/app.css
@@ -1,4 +1,5 @@
-/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */html {
+/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
+html {
     line-height: 1.15;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%
