--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ page.lang | default: site.lang | default: " en " }}" class="h-full">
+<html lang="{{ page.lang | default: site.lang | default: " en " }}" class="h-full no-js">
 {% include head.html %}
 
 
@@ -9,8 +9,8 @@
         <![endif]-->
 
     <div class="flex-auto">
-    {{ content }}
-    </div>   
+        {{ content }}
+    </div>
     {% include footer.html %}
     <script src="{{ '/assets/app.js' | relative_url }}?{{ site.time | date: '%s%N' }}"></script>
 
