--- a/resources/sass/_lightbox.scss
+++ b/resources/sass/_lightbox.scss
@@ -31,10 +31,8 @@
 
   .close-lightbox {
     position: absolute;
-    top: 0;
-    right: 20px;
-    font-size: 3rem;
-    font-weight: 300;
+    top: 10px;
+    right: 10px;
     color: white;
     cursor: pointer;
 
