--- a/resources/sass/_top_menu.scss
+++ b/resources/sass/_top_menu.scss
@@ -3,18 +3,12 @@
 }
 
 .dropdown-list {
-  top: 100%;
-  left: 50%;
-  width: 350px;
-  transform: translate3d(-50%, 0, 0) rotateX(90deg);
-  transition: 0.5s ease-in-out;
+  top: 6rem;
+  left: 0;
+  transform: rotateX(90deg);
+  transition: 0.3s ease-in-out;
   transform-origin: left top;
-
-  &.righty {
-    right: 0;
-    left: auto;
-    transform: rotateX(90deg);
-  }
+  height: calc(100vh - 6rem);
 }
 
 .top-menu-link:after {
@@ -29,19 +23,36 @@
   transform-origin: left top;
 }
 
+.navbar .sub_level_list {
+  transform: translate3d(100vw, 0, 0);
+  transition: 0.3s ease-in-out;
+
+  &.exposed {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
 @media screen and (min-width: 1290px) {
+  .top-menu-link.exposed .dropdown-list {
+    transform: rotateX(0deg);
+    z-index: 999;
+  }
+
+  .top-menu-link > span > svg {
+    transition: 0.3s;
+    transform: rotate(0deg);
+  }
+
+  .top-menu-link.exposed {
+    & > span > svg {
+      transform: rotate(180deg);
+    }
+  }
+
   .top-menu-link:hover {
     &:after {
       transition: 0.4s ease-in-out;
       transform: rotateY(0deg);
-    }
-    .dropdown-list {
-      transform: translate3d(-50%, 0, 0) rotateX(0deg);
-      z-index: 999;
-
-      &.righty {
-        transform: rotateX(0deg);
-      }
     }
   }
 }
