--- a/_includes/menu_bar.html
+++ b/_includes/menu_bar.html
@@ -3,7 +3,7 @@
 
 {% if collection.label != "posts" %}
 
-<div class="relative px-3 h-12 top-menu-link flex items-center xl:hover:bg-white xl:hover:text-black nav-top-link">
+<div class="relative px-3 h-12 top-menu-link flex items-center nav-top-link cursor-pointer">
     <span class="font-light hover:text-orange tracking-wide">{{ collection.title[page.lang] }}
         <svg height="16"
              class="align-middle menu-down-caret"
@@ -19,11 +19,11 @@
     {% assign used_categories = "" | split: "" %}
     {% assign articles=site[collection.label] | where:"lang",page.lang %}
 
-    <div class="dropdown-list bg-white shadow z-50 flex xl:absolute p-4 w-full">
+    <div class="dropdown-list bg-grey-darker z-50 flex fixed p-4 w-screen">
     <ul class="overflow-auto static w-full list-reset">
-        <li class="flex w-full justify-between hover:text-red inner-menu-close mb-4 text-grey-darkest mb-4 pb-4 xl:hidden justify-between items-center border-b border-grey-lighter">
-            <span>Close {{ collection.title[page.lang] }} menu</span>
-            <span class="font-bold">&times;</span>
+        <li class="flex w-full hover:text-orange inner-menu-close mb-4 text-grey-darkest mb-4 pb-4 xl:hidden items-center border-b border-grey-lighter">
+            {% include left_arrow.svg %}
+            <span>Menu</span>
         </li>
         {% for articles in articles %}
             {% assign parts = articles.path | split: "/" %}
@@ -31,7 +31,7 @@
             {% if num_parts == 2 %}
 
         <li>
-            <a class="w-full block py-2 hover:text-orange text-black xl:text-grey-dark no-underline" href="{{ articles.url | relative_url }}">
+            <a class="w-full block py-2 hover:text-orange text-white no-underline" href="{{ articles.url | relative_url }}">
                 {{ articles.title | escape }}
             </a>
         </li>
@@ -42,19 +42,23 @@
                 {% if matched == 0 %}
                     {% assign all_articles = site[collection.label] | where: "lang", page.lang %}
 
-        <li>
-            <p class="py-2 pl-2 font-black bg-grey-lighter text-grey-darkest pl-2">
+        <li class="has-submenu">
+            <p class="py-2 hover:text-orange cursor-pointer text-white flex items-center">
                 {{ sub_level | replace: "_", " " | capitalize }}
+                {% include right_arrow.svg %}
             </p>
-            <ul class="sub_level_list list-reset pl-4">
-
+            <ul class="sub_level_list list-reset pl-4 absolute pin-t pin-b pin-r w-screen bg-grey-dark">
+                <li class="sub-level-list-close flex items-center text-white hover:text-orange cursor-pointer mb-4 mt-3">
+                    {% include left_arrow.svg %}
+                    {{ collection.label | capitalize }}
+                </li>
                     {% for art in all_articles %}
                         {% assign parts = art.path | split: "/" %}
                         {% assign num_parts = art.path | split: "/" | size %}
                         {% if num_parts == 3 and parts[1] == sub_level %}   
 
                 <li>
-                    <a class="w-full block py-2 hover:text-orange text-black xl:text-grey-dark no-underline" href="{{ art.url | relative_url }}">
+                    <a class="w-full block py-2 hover:text-orange text-white no-underline" href="{{ art.url | relative_url }}">
                         {{ art.title | escape }}
                     </a>
                 </li>
