--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,13 +18,19 @@ html.stuck {
   body {
     overflow-x: hidden;
     overflow-y: auto;
+    padding-top: 6rem;
   }
 
   .page-header {
     position: fixed;
+    top: 0;
   }
 
   .accordian-icon {
+    z-index: -1;
+  }
+
+  iframe {
     z-index: -1;
   }
 }
@@ -33,6 +39,45 @@ body.stuck {
   overflow-x: hidden;
   overflow-y: hidden;
   position: relative;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #c1c1c1;
+  border: 0px none #ffffff;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #a8a8a8;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #787878;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border: 0px none #ffffff;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-track:active {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+  display: none;
+  height: 0px;
+  width: 0px;
 }
 
 @import "top_menu";
