--- a/resources/sass/_article_content.scss
+++ b/resources/sass/_article_content.scss
@@ -383,6 +383,10 @@ html {
     cursor: pointer;
   }
 
+  .video-container {
+    padding-bottom: 56.25%;
+  }
+
   pre {
     background: #333;
     color: white;
